--- a/src/scripts/components/_ui/panel/panel.scss
+++ b/src/scripts/components/_ui/panel/panel.scss
@@ -20,7 +20,7 @@
 
 .panel {
   display: flex;
-  flex: 1;
+  flex: 1 0 auto;
   flex-direction: row;
   justify-content: flex-start;
   align-items: stretch;
